issue #19 creating seperate getdown modules