@@ -217,87 +217,6 @@
                     </dependencyConfiguration>
                 </configuration>
             </plugin>
-            <plugin>			
-                <groupId>io.github.rockfireredmoon</groupId>
-                <artifactId>getdown-maven-plugin</artifactId>
-                <version>0.9.0</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>updates</goal>
-                        </goals>
-                        <configuration>
-                            <appbase>${de.cismet.cidsCodebase}/apps/navigator-g</appbase>
-                            <libPath>../.libs</libPath>
-                            <mainClass>Sirius.navigator.Navigator</mainClass>
-                            <outputJarVersions>true</outputJarVersions>
-                            <verbose>false</verbose>
-                            <appargs>
-                                <argument>${de.cismet.cidsCodebase.internet}/client/${de.cismet.cidsAccountExtension}/config/log4j.properties</argument>
-                                <argument>${de.cismet.cidsCodebase.internet}/client/${de.cismet.cidsAccountExtension}/config/navigator.cfg</argument>
-                                <argument>${de.cismet.cidsCodebase.internet}/client/${de.cismet.cidsAccountExtension}</argument>
-                                <argument>${de.cismet.cidsCodebase.internet}/client/${de.cismet.cidsAccountExtension}/plugins</argument>
-                                <argument>${de.cismet.cidsCodebase.internet}/client/${de.cismet.cidsAccountExtension}/search</argument>
-                                <argument>${de.cismet.cidsCodebase.internet}/client/${de.cismet.cidsAccountExtension}/profiles</argument>
-                            </appargs>
-                            <jvmargs>
-                                <jvmarg>-Duser.country=DE</jvmarg>
-                                <jvmarg>-Duser.language=de</jvmarg>
-                                <jvmarg>-Djnlp.intranetUse=true</jvmarg> 
-                                <jvmarg>-Xms512M</jvmarg>
-                                <jvmarg>-Xmx1200M</jvmarg>
-                                <jvmarg>-XX:+UseConcMarkSweepGC</jvmarg>
-				                <jvmarg>-XX:+CMSParallelRemarkEnabled</jvmarg>
-                            </jvmargs>
-                            <ui>
-                                <name>WuNDa Navigator v${project.version}</name>
-                                <background>00000000</background>
-                                <backgroundImage>${basedir}/splash_navigator.png</backgroundImage>
-                                <progressBar>EA9339</progressBar>
-                                <progress>20, 282, 397, 15</progress>
-                                <progressText>565656</progressText>
-                                <statusText>565656</statusText>
-                                <status>20, 146 397, 117</status>
-                                <hideDecorations>true</hideDecorations>                                
-                            </ui>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.0.2</version>
-                <executions>
-                    <execution>
-                        <id>copy-app</id>
-                        <phase>install</phase>
-                        <goals><goal>copy-resources</goal></goals>
-                        <configuration>
-                            <resources>
-                                <resource>
-                                    <directory>${basedir}/target/getdown</directory>
-                                </resource>
-                            </resources>
-                            <outputDirectory>${de.cismet.cidsDistDir}/apps/navigator-g/</outputDirectory>
-                        </configuration>                        
-                    </execution>
-                    <execution>
-                        <id>copy-libs</id>
-                        <phase>install</phase>
-                        <goals><goal>copy-resources</goal></goals>
-                        <configuration>
-                            <resources>
-                                <resource>
-                                    <directory>${basedir}/target/.libs</directory>
-                                </resource>
-                            </resources>
-                            <outputDirectory>${de.cismet.cidsDistDir}/apps/.libs/</outputDirectory>
-                        </configuration>                        
-                    </execution>
-                </executions>
-            </plugin>            
         </plugins>
     </build>
     <name>distribution-wunda-navigator-g</name>
